--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>cnavas</title>
+        <title>welcome GYH</title>
 
     </head>
     <body>
