--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@
           }
 
           function basicLoad(location) {
-            var possible = ['koalas', 'koalas1', 'koalas2', 'koalas3'];
-            //var file = 'img/' + possible[Math.floor(Math.random() * possible.length)] + '.jpg'
-            var file = 'img/gg.jpg'
+            var possible = ['gg1', 'gg2', 'gg3', 'gg4','gg'];
+            var file = 'img/' + possible[Math.floor(Math.random() * possible.length)] + '.jpg'
+            //var file = 'img/gg.jpg'
             return {
               file: file,
               shownFile: location.protocol + '//' + location.host + location.pathname + file
